--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -3,6 +3,7 @@
         <div class="quote-container">
             <h1 class="quote--title">Cotiza tu seguro automotriz</h1>
             <h3 class="quote--overtitle">¡Resultados instantáneos!</h3>
+            <div class="overline-smaller"></div>
             <div class="forms-container">
                 <app-forms-component *ngIf="sendInfoForForms" [detailsCreateForms]="detailsCreateForms"></app-forms-component>
             </div>
