--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -5,7 +5,7 @@
             <h3 class="quote--overtitle">¡Resultados instantáneos!</h3>
             <div class="overline-smaller"></div>
             <div class="forms-container">
-                <app-forms-component *ngIf="sendInfoForForms" [detailsCreateForms]="detailsCreateForms"></app-forms-component>
+                <app-forms-component *ngIf="sendInfoForForms" [detailsCreateForms]="detailsCreateForms" [infoDropdown]="infoDropdown"></app-forms-component>
             </div>
             <div class="quote--link">
                 <a href="#">Recuperar cotización</a>
